# flight-finder

./: .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierrc.json  API_KEYS_SETUP.py  Dockerfile  GITHUB_SYNC_TEST.md  Makefile  PROJECT_CLEANUP_SUMMARY.md  QUICK_START.md  README.md  SECURITY_FRAMEWORK_SUMMARY.md  docker-compose.yml  main.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup-api-keys.ps1  setup-api-keys.sh  setup.js  sonar-project.properties  streamlit_app.py  test_api_keys.py
.github/workflows/: security.yml
data/: sample_routes.json
docs/: API_KEYS_SETUP.md  API_SETUP.md
src/: config.py  security_config.py  security_orchestrator.py
src/agents/: route_agent.py  security_lead_agent.py  security_lead_agent_minimal.py
src/prompts/: prompts.py  travel_prompts.py
src/ragdb/: baggage_policies.json  retriever.py
src/tests/: test_route_agent.py
src/tools/: emailer.py  filters.py  formatters.py  scoring.py  security.py  security_lead_tools.py
src/tools/providers/: amadeus_provider.py  base.py  mock_provider.py  omio_provider.py
tests/: test_security.py
